--- a/algorithms.general.html
+++ b/algorithms.general.html
@@ -1051,7 +1051,7 @@ or
 the template argument shall satisfy the requirements
 of a random-access iterator (<a href='random.access.iterators'>[random.access.iterators]</a>).
 </p></li></ul></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >If an algorithm's
-<b>Effects</b>
+<i>Effects:</i>
 section says that a value pointed to by any iterator passed
 as an argument is modified, then that algorithm has an additional
 type requirement:
