--- a/basic.lookup.argdep.html
+++ b/basic.lookup.argdep.html
@@ -20,8 +20,9 @@ void g() {
 </span>                                <span class='comment'>// prevent argument-dependent lookup
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >For each argument type <span class='texttt'>T</span> in the function call, there is a set of
-zero or more associated namespaces and a set of zero or more associated
-classes to be considered. The sets of namespaces and classes are
+zero or more <a class='hidden_link' href='#def:namespace,associated' id='def:namespace,associated'><i>associated namespaces</i></a>
+and a set of zero or more <a class='hidden_link' href='#def:class,associated' id='def:class,associated'><i>associated classes</i></a>
+to be considered. The sets of namespaces and classes are
 determined entirely by the types of the function arguments (and the
 namespace of any template template argument). Typedef names and
 <i ><a href='namespace.udecl#nt:using-declaration'>using-declarations</a></i> used to specify the types do not
