--- a/contents.html
+++ b/contents.html
@@ -13,7 +13,7 @@ directly in that namespace or in an inline namespace inside that
 namespace.<a class='footnotenum' href='#footnote-168'>168</a></p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >Whenever a name <span class='texttt'>x</span> defined in the standard library is mentioned,
 the name <span class='texttt'>x</span> is assumed to be fully qualified as
 <span class='texttt'>::std::x</span>,
-unless explicitly described otherwise. For example, if the Effects section
+unless explicitly described otherwise. For example, if the <i>Effects:</i> section
 for library function <span class='texttt'>F</span> is described as calling library function <span class='texttt'>G</span>,
 the function
 <span class='texttt'>::std::G</span>
