--- a/depr.str.strstreams.html
+++ b/depr.str.strstreams.html
@@ -191,7 +191,7 @@ If the next pointer for the output sequence, <span class='texttt'>pnext</span>, 
 a null pointer, returns zero.
 Otherwise, returns the current
 effective length of the array object as the next pointer minus the beginning
-pointer for the output sequence, <span class='texttt'>pnext</span> - <span class='texttt'>pbeg</span>.
+pointer for the output sequence, <span class='texttt'>pnext - pbeg</span>.
 </p></div></div></div><div id='depr.strstreambuf.virtuals'><h4 ><a class='secnum' href='#depr.strstreambuf.virtuals' style='min-width:118pt'>D.5.1.3</a> <span class='texttt'>strstreambuf</span> overridden virtual functions <a class='abbr_ref' href='depr.strstreambuf.virtuals'>[depr.strstreambuf.virtuals]</a></h4><p ><span class='indexparent'><a class='index' id='overflow,strstreambuf'></a></span><span class='indexparent'><a class='index' id='strstreambuf,overflow'></a></span><code class='itemdecl'>
 int_type overflow(int_type c = EOF) override;
 </code></p><div class='itemdescr'></div><div class='para' id='depr.strstreambuf.virtuals-1'><div class='marginalizedparent'><a class='marginalized' href='#depr.strstreambuf.virtuals-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
@@ -353,7 +353,7 @@ Otherwise, the function determines <span class='texttt'>newoff</span> from
 <span class='texttt'>sp.offset()</span>:
 </p><ul ><li ><p >If <span class='texttt'>newoff</span> is an invalid stream position,
 has a negative value, or
-has a value greater than (<span class='texttt'>seekhigh</span> - <span class='texttt'>seeklow</span>),
+has a value greater than (<span class='texttt'>seekhigh - seeklow</span>),
 the positioning operation fails
 </p></li><li ><p >Otherwise, the function
 adds <span class='texttt'>newoff</span> to the beginning pointer <span class='texttt'>xbeg</span> and
