--- a/depr.strstreambuf.members.html
+++ b/depr.strstreambuf.members.html
@@ -21,5 +21,5 @@ If the next pointer for the output sequence, <span class='texttt'>pnext</span>, 
 a null pointer, returns zero.
 Otherwise, returns the current
 effective length of the array object as the next pointer minus the beginning
-pointer for the output sequence, <span class='texttt'>pnext</span> - <span class='texttt'>pbeg</span>.
+pointer for the output sequence, <span class='texttt'>pnext - pbeg</span>.
 </p></div></div></div></div></body></html>
