--- a/depr.strstreambuf.virtuals.html
+++ b/depr.strstreambuf.virtuals.html
@@ -159,7 +159,7 @@ Otherwise, the function determines <span class='texttt'>newoff</span> from
 <span class='texttt'>sp.offset()</span>:
 </p><ul ><li ><p >If <span class='texttt'>newoff</span> is an invalid stream position,
 has a negative value, or
-has a value greater than (<span class='texttt'>seekhigh</span> - <span class='texttt'>seeklow</span>),
+has a value greater than (<span class='texttt'>seekhigh - seeklow</span>),
 the positioning operation fails
 </p></li><li ><p >Otherwise, the function
 adds <span class='texttt'>newoff</span> to the beginning pointer <span class='texttt'>xbeg</span> and
