--- a/futures.async.html
+++ b/futures.async.html
@@ -20,8 +20,8 @@ the returned <span class='texttt'>future</span> object.
 The further behavior
 of the second function depends on the <span class='texttt'>policy</span> argument as follows (if
 more than one of these conditions applies, the implementation may choose any of
-the corresponding policies):</p><ul ><li ><p >If <span class='texttt'>policy &amp; launch::async</span> is non-zero — calls
-<span class='texttt'><i>INVOKE</i>(<i>DECAY_COPY</i>(std::forward&lt;F&gt;(f)),</span><br/> 
+the corresponding policies):</p><ul ><li ><p >If <span class='texttt'>launch::async</span> is set in <span class='texttt'>policy</span>, calls
+<span class='texttt'><i>INVOKE</i>(<i>DECAY_COPY</i>(std::forward&lt;F&gt;(f)),</span>
 <span class='texttt'><i>DECAY_COPY</i>(std::forward&lt;Args&gt;(args))...)</span>
 (<a href='func.require'>[func.require]</a>, <a href='thread.thread.constr'>[thread.thread.constr]</a>)
 as if in a new thread of execution represented by a <span class='texttt'>thread</span> object
@@ -36,8 +36,8 @@ is stored as the exceptional result in the shared state.
 The <span class='texttt'>thread</span> object is
 stored in the shared state
 and affects the behavior of any asynchronous return objects that
-reference that state.</p></li><li ><p >If <span class='texttt'>policy &amp; launch::deferred</span> is non-zero —
-Stores <span class='texttt'><i>DECAY_COPY</i>(std::forward&lt;F&gt;(f))</span> and<br/>
+reference that state.</p></li><li ><p >If <span class='texttt'>launch::deferred</span> is set in <span class='texttt'>policy</span>,
+stores <span class='texttt'><i>DECAY_COPY</i>(std::forward&lt;F&gt;(f))</span> and
 <span class='texttt'><i>DECAY_COPY</i>(std::forward&lt;Args&gt;(args))...</span>
 in the shared state. These copies of <span class='texttt'>f</span> and <span class='texttt'>args</span> constitute
 a <a class='hidden_link' href='#def:deferred_function' id='def:deferred_function'><i>deferred function</i></a>. Invocation of the deferred function evaluates
