--- a/futures.overview.html
+++ b/futures.overview.html
@@ -66,7 +66,7 @@ namespace std {
     async(launch policy, F&amp;&amp; f, Args&amp;&amp;... args);
 }
 </pre></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >The <span class='texttt'>enum</span> type <span class='texttt'>launch</span> is a bitmask type (<a href='bitmask.types'>[bitmask.types]</a>) with
-<span class='texttt'>launch::async</span> and <span class='texttt'>launch::deferred</span> denoting individual bits.
+elements <span class='texttt'>launch::async</span> and <span class='texttt'>launch::deferred</span>.
 [&nbsp;<i>Note:</i><span class='space'></span> Implementations can provide bitmasks to specify restrictions on task
 interaction by functions launched by <span class='texttt'>async()</span> applicable to a
 corresponding subset of available launch policies. Implementations can extend
