--- a/library.html
+++ b/library.html
@@ -245,7 +245,7 @@ appropriate):<a class='footnotenum' href='#footnote-159'>159</a></p><ul ><li ><p
 </p></li><li ><p ><i>Throws:</i> any exceptions thrown by the function, and the conditions that would cause the exception
 </p></li><li ><p ><i>Complexity:</i> the time and/or space complexity of the function
 </p></li><li ><p ><i>Remarks:</i> additional semantic constraints on the function
-</p></li><li ><p ><i>Error conditions:</i> the error conditions for error codes reported by the function.
+</p></li><li ><p ><i>Error conditions:</i> the error conditions for error codes reported by the function
 </p></li><li ><p ><i>Notes:</i> non-normative comments about the function
 </p></li></ul></div><div class='para' id='structure.specifications-4'><div class='marginalizedparent'><a class='marginalized' href='#structure.specifications-4'>4</a></div><p >Whenever the <i>Effects:</i> element specifies that the semantics of some function
 <span class='texttt'>F</span> are <i>Equivalent to</i> some code sequence, then the various elements are
@@ -279,7 +279,7 @@ For example, if a class does not specify any comparison functions, there
 will be no “Comparison functions” subclause.</p></div><div class='footnote' id='footnote-159'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-159'>159)</a></div><p >To save space, items that do not apply to a function are omitted.
 For example, if a function does not specify any
 further
-preconditions, there will be no “Requires” paragraph.</p></div><div class='footnote' id='footnote-160'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-160'>160)</a></div><p >This simplifies
+preconditions, there will be no <i>Requires:</i> paragraph.</p></div><div class='footnote' id='footnote-160'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-160'>160)</a></div><p >This simplifies
 the presentation of complexity requirements in some cases.</p></div></div><div id='structure.see.also'><h4 ><a class='secnum' href='#structure.see.also' style='min-width:118pt'>17.4.1.5</a> C library <a class='abbr_ref' href='structure.see.also'>[structure.see.also]</a></h4><div class='para' id='structure.see.also-1'><div class='marginalizedparent'><a class='marginalized' href='#structure.see.also-1'>1</a></div><p >Paragraphs labeled “<span class='textsc'>See also:</span>” contain cross-references to the relevant portions
 of this International Standard and the ISO C standard.</p></div></div></div><div id='conventions'><h3 ><a class='secnum' href='#conventions' style='min-width:103pt'>17.4.2</a> Other conventions <a class='abbr_ref' href='conventions'>[conventions]</a></h3><p ><span class='indexparent'><a class='index' id='conventions'></a></span>
 </p><div class='para' id='conventions-1'><div class='marginalizedparent'><a class='marginalized' href='#conventions-1'>1</a></div><p >This subclause describes several editorial conventions used to describe the contents
@@ -522,7 +522,7 @@ directly in that namespace or in an inline namespace inside that
 namespace.<a class='footnotenum' href='#footnote-168'>168</a></p></div><div class='para' id='contents-3'><div class='marginalizedparent'><a class='marginalized' href='#contents-3'>3</a></div><p >Whenever a name <span class='texttt'>x</span> defined in the standard library is mentioned,
 the name <span class='texttt'>x</span> is assumed to be fully qualified as
 <span class='texttt'>::std::x</span>,
-unless explicitly described otherwise. For example, if the Effects section
+unless explicitly described otherwise. For example, if the <i>Effects:</i> section
 for library function <span class='texttt'>F</span> is described as calling library function <span class='texttt'>G</span>,
 the function
 <span class='texttt'>::std::G</span>
@@ -1612,14 +1612,14 @@ described as synonyms for basic integral types, such as
 <span class='texttt'>size_t</span> (<a href='support.types'>[support.types]</a>) and
 <span class='texttt'>streamoff</span> (<a href='stream.types'>[stream.types]</a>).</p></div></div><div id='res.on.exception.handling'><h4 ><a class='secnum' href='#res.on.exception.handling' style='min-width:118pt'>17.5.5.12</a> Restrictions on exception handling <a class='abbr_ref' href='res.on.exception.handling'>[res.on.exception.handling]</a></h4><p ><span class='indexparent'><a class='index' id='restriction'></a></span><span class='indexparent'><a class='index' id='exception_handling,handler'></a></span></p><div class='para' id='res.on.exception.handling-1'><div class='marginalizedparent'><a class='marginalized' href='#res.on.exception.handling-1'>1</a></div><p >Any of the functions defined in the C++ standard library
 <span class='indexparent'><a class='index' id='library,C++_standard'></a></span>can report a failure by throwing an exception of a type described in its
-<b>Throws:</b>
+<i>Throws:</i>
 paragraph.
 An implementation may strengthen the
 exception specification
 for a
 non-virtual
-function by adding a non-throwing <i ><a href='except.spec#nt:noexcept-specification'>noexcept-specification</a></i>.</p></div><div class='para' id='res.on.exception.handling-2'><div class='marginalizedparent'><a class='marginalized' href='#res.on.exception.handling-2'>2</a></div><p >A function may throw an object of a type not listed in its <b>Throws</b>
-clause if its type is derived from a type named in the <b>Throws</b> clause
+function by adding a non-throwing <i ><a href='except.spec#nt:noexcept-specification'>noexcept-specification</a></i>.</p></div><div class='para' id='res.on.exception.handling-2'><div class='marginalizedparent'><a class='marginalized' href='#res.on.exception.handling-2'>2</a></div><p >A function may throw an object of a type not listed in its <i>Throws:</i>
+clause if its type is derived from a type named in the <i>Throws:</i> clause
 and would be caught by an exception handler for the base type.</p></div><div class='para' id='res.on.exception.handling-3'><div class='marginalizedparent'><a class='marginalized' href='#res.on.exception.handling-3'>3</a></div><p >Functions from the C standard library shall not throw exceptions<span class='indexparent'><a class='index' id='specifications,C_standard_library_exception'></a></span><a class='footnotenum' href='#footnote-184'>184</a>
 except when such a function calls a program-supplied function that throws an
 exception.<a class='footnotenum' href='#footnote-185'>185</a></p></div><div class='para' id='res.on.exception.handling-4'><div class='marginalizedparent'><a class='marginalized' href='#res.on.exception.handling-4'>4</a></div><p >Destructor operations defined in the C++ standard library
