--- a/map.cons.html
+++ b/map.cons.html
@@ -19,5 +19,5 @@ Linear in <span class='math'><span class='mathalpha'>N</span></span> if the rang
 <span class='texttt'>[first, <span class='discretionary'></span>last)</span>
 is already sorted using <span class='texttt'>comp</span>
 and otherwise <span class='math'><span class='mathalpha'>N</span> <span class="mathrm">log</span>N</span>, where <span class='math'><span class='mathalpha'>N</span></span>
-is <span class='texttt'>last</span> - <span class='texttt'>first</span>.
+is <span class='texttt'>last - first</span>.
 </p></div></div></div></div></body></html>
