--- a/numerics.html
+++ b/numerics.html
@@ -6457,7 +6457,7 @@ but it shall not report a domain error.
 Otherwise,
 the function shall report a domain error
 for just those argument values
-for which:</p><ul ><li ><p >the function description's <span class='emph'>Returns</span> clause
+for which:</p><ul ><li ><p >the function description's <i>Returns:</i> clause
   explicitly specifies a domain
   and those argument values fall
   outside the specified domain,
