--- a/path.modifiers.html
+++ b/path.modifiers.html
@@ -51,5 +51,5 @@ path&amp; replace_extension(const path&amp; replacement = path());
 </p></div></div><p ><span class='indexparent'><a class='index' id='swap,path'></a></span><span class='indexparent'><a class='index' id='path,swap'></a></span><code class='itemdecl'>
 void swap(path&amp; rhs) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='13'><div class='marginalizedparent'><a class='marginalized' href='#13'>13</a></div><div class='itemdescr'><p ><i>Effects:</i> Swaps the contents of the two paths <span class='texttt'>pathstring</span> and
-<span class='texttt'>rhs.pathstring</span>.</p></div></div><div class='para' id='14'><div class='marginalizedparent'><a class='marginalized' href='#14'>14</a></div><div class='itemdescr'><p ><i>Complexity:</i> constant time.
+<span class='texttt'>rhs.pathstring</span>.</p></div></div><div class='para' id='14'><div class='marginalizedparent'><a class='marginalized' href='#14'>14</a></div><div class='itemdescr'><p ><i>Complexity:</i> Constant time.
 </p></div></div></div></div></body></html>
