--- a/res.on.exception.handling.html
+++ b/res.on.exception.handling.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html lang='en'><head><title>[res.on.exception.handling]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>17</a> Library introduction <a class='abbr_ref' href='./#library'>[library]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>17.5</a> Library-wide requirements <a class='abbr_ref' href='requirements#res.on.exception.handling'>[requirements]</a></h2><h3 ><a class='secnum' style='min-width:103pt'>17.5.5</a> Conforming implementations <a class='abbr_ref' href='conforming#res.on.exception.handling'>[conforming]</a></h3><div id='res.on.exception.handling'><h4 ><a class='secnum' style='min-width:118pt'>17.5.5.12</a> Restrictions on exception handling <a class='abbr_ref'>[res.on.exception.handling]</a></h4><p ><span class='indexparent'><a class='index' id='restriction'></a></span><span class='indexparent'><a class='index' id='exception_handling,handler'></a></span></p><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >Any of the functions defined in the C++ standard library
 <span class='indexparent'><a class='index' id='library,C++_standard'></a></span>can report a failure by throwing an exception of a type described in its
-<b>Throws:</b>
+<i>Throws:</i>
 paragraph.
 An implementation may strengthen the
 exception specification
 for a
 non-virtual
-function by adding a non-throwing <i ><a href='except.spec#nt:noexcept-specification'>noexcept-specification</a></i>.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >A function may throw an object of a type not listed in its <b>Throws</b>
-clause if its type is derived from a type named in the <b>Throws</b> clause
+function by adding a non-throwing <i ><a href='except.spec#nt:noexcept-specification'>noexcept-specification</a></i>.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >A function may throw an object of a type not listed in its <i>Throws:</i>
+clause if its type is derived from a type named in the <i>Throws:</i> clause
 and would be caught by an exception handler for the base type.</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >Functions from the C standard library shall not throw exceptions<span class='indexparent'><a class='index' id='specifications,C_standard_library_exception'></a></span><a class='footnotenum' href='#footnote-184'>184</a>
 except when such a function calls a program-supplied function that throws an
 exception.<a class='footnotenum' href='#footnote-185'>185</a></p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >Destructor operations defined in the C++ standard library
