--- a/structure.specifications.html
+++ b/structure.specifications.html
@@ -20,7 +20,7 @@ appropriate):<a class='footnotenum' href='#footnote-159'>159</a></p><ul ><li ><p
 </p></li><li ><p ><i>Throws:</i> any exceptions thrown by the function, and the conditions that would cause the exception
 </p></li><li ><p ><i>Complexity:</i> the time and/or space complexity of the function
 </p></li><li ><p ><i>Remarks:</i> additional semantic constraints on the function
-</p></li><li ><p ><i>Error conditions:</i> the error conditions for error codes reported by the function.
+</p></li><li ><p ><i>Error conditions:</i> the error conditions for error codes reported by the function
 </p></li><li ><p ><i>Notes:</i> non-normative comments about the function
 </p></li></ul></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >Whenever the <i>Effects:</i> element specifies that the semantics of some function
 <span class='texttt'>F</span> are <i>Equivalent to</i> some code sequence, then the various elements are
@@ -54,5 +54,5 @@ For example, if a class does not specify any comparison functions, there
 will be no “Comparison functions” subclause.</p></div><div class='footnote' id='footnote-159'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-159'>159)</a></div><p >To save space, items that do not apply to a function are omitted.
 For example, if a function does not specify any
 further
-preconditions, there will be no “Requires” paragraph.</p></div><div class='footnote' id='footnote-160'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-160'>160)</a></div><p >This simplifies
+preconditions, there will be no <i>Requires:</i> paragraph.</p></div><div class='footnote' id='footnote-160'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-160'>160)</a></div><p >This simplifies
 the presentation of complexity requirements in some cases.</p></div></div></div></body></html>
