--- a/vector.cons.html
+++ b/vector.cons.html
@@ -30,7 +30,7 @@ is the distance between
 <span class='texttt'>first</span>
 and
 <span class='texttt'>last</span>)
-and no reallocations if iterators first and last are of forward, bidirectional, or random access categories.
+and no reallocations if iterators <span class='texttt'>first</span> and <span class='texttt'>last</span> are of forward, bidirectional, or random access categories.
 It makes order
 <span class='texttt'>N</span>
 calls to the copy constructor of
