--- a/algorithms.html
+++ b/algorithms.html
@@ -1051,7 +1051,7 @@ or
 the template argument shall satisfy the requirements
 of a random-access iterator (<a href='random.access.iterators'>[random.access.iterators]</a>).
 </p></li></ul></div><div class='para' id='general-6'><div class='marginalizedparent'><a class='marginalized' href='#general-6'>6</a></div><p >If an algorithm's
-<b>Effects</b>
+<i>Effects:</i>
 section says that a value pointed to by any iterator passed
 as an argument is modified, then that algorithm has an additional
 type requirement:
@@ -2470,7 +2470,7 @@ template&lt;class ExecutionPolicy, class ForwardIterator, class Predicate&gt;
 <span class='texttt'>ForwardIterator</span> shall satisfy the requirements of
 <span class='texttt'>ValueSwappable</span> (<a href='swappable.requirements'>[swappable.requirements]</a>).</p></div></div><div class='para' id='alg.partitions-5'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-5'>5</a></div><div class='itemdescr'><p ><i>Effects:</i> Places all the elements in the range <span class='texttt'>[first, <span class='discretionary'></span>last)</span> that satisfy <span class='texttt'>pred</span> before all the elements that do not satisfy it.</p></div></div><div class='para' id='alg.partitions-6'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-6'>6</a></div><div class='itemdescr'><p ><i>Returns:</i> An iterator <span class='texttt'>i</span> such that for every iterator <span class='texttt'>j</span> in the range
 <span class='texttt'>[first, <span class='discretionary'></span>i)</span> <span class='texttt'>pred(*j) != false</span>, and for every iterator <span class='texttt'>k</span> in the
-range <span class='texttt'>[i, <span class='discretionary'></span>last)</span>, <span class='texttt'>pred(*k) == false</span>.</p></div></div><div class='para' id='alg.partitions-7'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-7'>7</a></div><div class='itemdescr'><p ><i>Complexity:</i> If ForwardIterator meets the requirements for a BidirectionalIterator, at most
+range <span class='texttt'>[i, <span class='discretionary'></span>last)</span>, <span class='texttt'>pred(*k) == false</span>.</p></div></div><div class='para' id='alg.partitions-7'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-7'>7</a></div><div class='itemdescr'><p ><i>Complexity:</i> If <span class='texttt'>ForwardIterator</span> meets the requirements for a <span class='texttt'>BidirectionalIterator</span>, at most
 <span class='texttt'>(last - first) / 2</span> swaps are done; otherwise at most <span class='texttt'>last - first</span> swaps
 are done. Exactly <span class='texttt'>last - first</span> applications of the predicate are done.
 </p></div></div><p ><span class='indexparent'><a class='index' id='stable_partition'></a></span><code class='itemdecl'>
