--- a/conforming.html
+++ b/conforming.html
@@ -107,14 +107,14 @@ described as synonyms for basic integral types, such as
 <span class='texttt'>size_t</span> (<a href='support.types'>[support.types]</a>) and
 <span class='texttt'>streamoff</span> (<a href='stream.types'>[stream.types]</a>).</p></div></div><div id='res.on.exception.handling'><h4 ><a class='secnum' href='#res.on.exception.handling' style='min-width:118pt'>17.5.5.12</a> Restrictions on exception handling <a class='abbr_ref' href='res.on.exception.handling'>[res.on.exception.handling]</a></h4><p ><span class='indexparent'><a class='index' id='restriction'></a></span><span class='indexparent'><a class='index' id='exception_handling,handler'></a></span></p><div class='para' id='res.on.exception.handling-1'><div class='marginalizedparent'><a class='marginalized' href='#res.on.exception.handling-1'>1</a></div><p >Any of the functions defined in the C++ standard library
 <span class='indexparent'><a class='index' id='library,C++_standard'></a></span>can report a failure by throwing an exception of a type described in its
-<b>Throws:</b>
+<i>Throws:</i>
 paragraph.
 An implementation may strengthen the
 exception specification
 for a
 non-virtual
-function by adding a non-throwing <i ><a href='except.spec#nt:noexcept-specification'>noexcept-specification</a></i>.</p></div><div class='para' id='res.on.exception.handling-2'><div class='marginalizedparent'><a class='marginalized' href='#res.on.exception.handling-2'>2</a></div><p >A function may throw an object of a type not listed in its <b>Throws</b>
-clause if its type is derived from a type named in the <b>Throws</b> clause
+function by adding a non-throwing <i ><a href='except.spec#nt:noexcept-specification'>noexcept-specification</a></i>.</p></div><div class='para' id='res.on.exception.handling-2'><div class='marginalizedparent'><a class='marginalized' href='#res.on.exception.handling-2'>2</a></div><p >A function may throw an object of a type not listed in its <i>Throws:</i>
+clause if its type is derived from a type named in the <i>Throws:</i> clause
 and would be caught by an exception handler for the base type.</p></div><div class='para' id='res.on.exception.handling-3'><div class='marginalizedparent'><a class='marginalized' href='#res.on.exception.handling-3'>3</a></div><p >Functions from the C standard library shall not throw exceptions<span class='indexparent'><a class='index' id='specifications,C_standard_library_exception'></a></span><a class='footnotenum' href='#footnote-184'>184</a>
 except when such a function calls a program-supplied function that throws an
 exception.<a class='footnotenum' href='#footnote-185'>185</a></p></div><div class='para' id='res.on.exception.handling-4'><div class='marginalizedparent'><a class='marginalized' href='#res.on.exception.handling-4'>4</a></div><p >Destructor operations defined in the C++ standard library
