--- a/description.html
+++ b/description.html
@@ -59,7 +59,7 @@ appropriate):<a class='footnotenum' href='#footnote-159'>159</a></p><ul ><li ><p
 </p></li><li ><p ><i>Throws:</i> any exceptions thrown by the function, and the conditions that would cause the exception
 </p></li><li ><p ><i>Complexity:</i> the time and/or space complexity of the function
 </p></li><li ><p ><i>Remarks:</i> additional semantic constraints on the function
-</p></li><li ><p ><i>Error conditions:</i> the error conditions for error codes reported by the function.
+</p></li><li ><p ><i>Error conditions:</i> the error conditions for error codes reported by the function
 </p></li><li ><p ><i>Notes:</i> non-normative comments about the function
 </p></li></ul></div><div class='para' id='structure.specifications-4'><div class='marginalizedparent'><a class='marginalized' href='#structure.specifications-4'>4</a></div><p >Whenever the <i>Effects:</i> element specifies that the semantics of some function
 <span class='texttt'>F</span> are <i>Equivalent to</i> some code sequence, then the various elements are
@@ -93,7 +93,7 @@ For example, if a class does not specify any comparison functions, there
 will be no “Comparison functions” subclause.</p></div><div class='footnote' id='footnote-159'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-159'>159)</a></div><p >To save space, items that do not apply to a function are omitted.
 For example, if a function does not specify any
 further
-preconditions, there will be no “Requires” paragraph.</p></div><div class='footnote' id='footnote-160'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-160'>160)</a></div><p >This simplifies
+preconditions, there will be no <i>Requires:</i> paragraph.</p></div><div class='footnote' id='footnote-160'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-160'>160)</a></div><p >This simplifies
 the presentation of complexity requirements in some cases.</p></div></div><div id='structure.see.also'><h4 ><a class='secnum' href='#structure.see.also' style='min-width:118pt'>17.4.1.5</a> C library <a class='abbr_ref' href='structure.see.also'>[structure.see.also]</a></h4><div class='para' id='structure.see.also-1'><div class='marginalizedparent'><a class='marginalized' href='#structure.see.also-1'>1</a></div><p >Paragraphs labeled “<span class='textsc'>See also:</span>” contain cross-references to the relevant portions
 of this International Standard and the ISO C standard.</p></div></div></div><div id='conventions'><h3 ><a class='secnum' href='#conventions' style='min-width:103pt'>17.4.2</a> Other conventions <a class='abbr_ref' href='conventions'>[conventions]</a></h3><p ><span class='indexparent'><a class='index' id='conventions'></a></span>
 </p><div class='para' id='conventions-1'><div class='marginalizedparent'><a class='marginalized' href='#conventions-1'>1</a></div><p >This subclause describes several editorial conventions used to describe the contents
