--- a/map.html
+++ b/map.html
@@ -251,7 +251,7 @@ Linear in <span class='math'><span class='mathalpha'>N</span></span> if the rang
 <span class='texttt'>[first, <span class='discretionary'></span>last)</span>
 is already sorted using <span class='texttt'>comp</span>
 and otherwise <span class='math'><span class='mathalpha'>N</span> <span class="mathrm">log</span>N</span>, where <span class='math'><span class='mathalpha'>N</span></span>
-is <span class='texttt'>last</span> - <span class='texttt'>first</span>.
+is <span class='texttt'>last - first</span>.
 </p></div></div></div><div id='access'><h4 ><a class='secnum' href='#access' style='min-width:118pt'>23.4.4.3</a> <span class='texttt'>map</span> element access <a class='abbr_ref' href='map.access'>[map.access]</a></h4><p ><span class='indexparent'><a class='index' id='operator[],map'></a></span><code class='itemdecl'>
 T&amp; operator[](const key_type&amp; x);
 </code></p><div class='itemdescr'></div><div class='para' id='access-1'><div class='marginalizedparent'><a class='marginalized' href='#access-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
